improvements and squashed bugs

--- a/css/store.css
+++ b/css/store.css
@@ -82,6 +82,7 @@ select {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 10px;
 }
 
 .radio-box legend {
